# plugify-plugin-polyhook

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  plugify-plugin-polyhook.pplugin.in  polyhook.json  polyhook.pplugin.in
.github/workflows/: cmake-multiple-platform.yml
cmake/: FetchPolyhook.cmake  dynlibutils.cmake
conda/: bld.bat  build.sh  meta.yaml.example
patches/: polyhook.patch
src/: callback.cpp  callback.hpp  plugin.cpp  plugin.hpp
sym/: exported_symbols.lds  version_script.lds
